Adapted the render attribute validations to use the new simplified way to catch invalid attributes